--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
     <link rel="stylesheet" href="./css/styles.css" type="text/css" />
     <title>Frontend Mentor | Calculator app</title>
   </head>
-  <body>
+  <body class="body body_bg-color-theme-2">
     <main class="main">
       <header class="header">
-        <h1 class="title">calc</h1>
+        <h1 class="title text-color-theme-2">calc</h1>
         <div class="switch__group">
-          <p class="description__options">
+          <p class="description__options text-color-theme-2">
             <span class="option">1</span><span class="option">2</span
             ><span class="option">3</span>
           </p>
           <div class="switch__container">
-            <h2 class="switch__description">theme</h2>
-            <div class="switch">
+            <h2 class="switch__description text-color-theme-2">theme</h2>
+            <div class="switch keys-switch_bg-color">
               <input
                 type="radio"
                 name="option-theme"
@@ -59,22 +59,24 @@
               />
               <button
                 type="button"
-                class="switch-controler"
+                class="switch-controler switch-controler_bg-color"
                 aria-labelledby="Switch controler"
+                aria-pressed="mixed"
+                aria-label="Switch Controller to toggle themes"
               ></button>
             </div>
           </div>
         </div>
       </header>
       <div
-        class="viewfinder"
+        class="viewfinder text-color-theme-2"
         aria-live="assertive"
         aria-atomic="true"
         aria-labelledby="view results and operations"
       >
         399,981
       </div>
-      <div class="keys">
+      <div class="keys keys-switch_bg-color">
         <button class="button button__number" type="button" value="7">7</button>
         <button class="button button__number" type="button" value="8">8</button>
         <button class="button button__number" type="button" value="9">9</button>
