mobile first finished, implemented toggle theme js and desktop layout started

--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
             <div class="switch">
               <input
                 type="radio"
+                id="theme-01"
                 name="option-theme"
                 aria-label="Option theme 01"
-                value="theme-01"
+                value="1"
                 class="option-theme"
                 checked="true"
                 aria-checked="true"
@@ -44,18 +45,20 @@
               />
               <input
                 type="radio"
+                id="theme-02"
                 name="option-theme"
                 aria-label="Option theme 02"
-                value="theme-02"
+                value="2"
                 class="option-theme"
                 tabindex="0"
                 aria-hidden="true"
               />
               <input
                 type="radio"
+                id="theme-03"
                 name="option-theme"
                 aria-label="Option theme 03"
-                value="theme-03"
+                value="3"
                 class="option-theme"
                 tabindex="0"
                 aria-hidden="true"
@@ -114,5 +117,7 @@
         <button class="button button__result" type="button" value="=">=</button>
       </div>
     </main>
+
+    <script src="./js/app.js"></script>
   </body>
 </html>
