features calculators implementeds

--- a/index.html
+++ b/index.html
@@ -83,38 +83,38 @@
         399,981
       </div>
       <div class="keys">
-        <button class="button button__number button__commons" type="button" value="7">7</button>
-        <button class="button button__number button__commons" type="button" value="8">8</button>
-        <button class="button button__number button__commons" type="button" value="9">9</button>
-        <button class="button button__calculator" type="button" value="DEL">
+        <button class="button button__number button__commons" type="button" value="7" data-action="number">7</button>
+        <button class="button button__number button__commons" type="button" value="8" data-action="number">8</button>
+        <button class="button button__number button__commons" type="button" value="9" data-action="number">9</button>
+        <button class="button button__calculator" type="button" value="DEL" data-action="deletar">
           DEL
         </button>
-        <button class="button button__number button__commons" type="button" value="4">4</button>
-        <button class="button button__number button__commons" type="button" value="5">5</button>
-        <button class="button button__number button__commons" type="button" value="6">6</button>
-        <button class="button button__operator button__commons" type="button" value="+">
+        <button class="button button__number button__commons" type="button" value="4" data-action="number">4</button>
+        <button class="button button__number button__commons" type="button" value="5" data-action="number">5</button>
+        <button class="button button__number button__commons" type="button" value="6" data-action="number">6</button>
+        <button class="button button__operator button__commons" type="button" value="+" data-action="somar">
           +
         </button>
-        <button class="button button__number button__commons" type="button" value="1">1</button>
-        <button class="button button__number button__commons" type="button" value="2">2</button>
-        <button class="button button__number button__commons" type="button" value="3">3</button>
-        <button class="button button__operator button__commons" type="button" value="-">
+        <button class="button button__number button__commons" type="button" value="1" data-action="number">1</button>
+        <button class="button button__number button__commons" type="button" value="2" data-action="number">2</button>
+        <button class="button button__number button__commons" type="button" value="3" data-action="number">3</button>
+        <button class="button button__operator button__commons" type="button" value="-" data-action="subtrair">
           -
         </button>
-        <button class="button button__commons button__diviser" type="button" value=".">
+        <button class="button button__commons button__diviser" type="button" value="." data-action="number">
           .
         </button>
-        <button class="button button__number button__commons" type="button" value="0">0</button>
-        <button class="button button__operator button__commons" type="button" value="/">
+        <button class="button button__number button__commons" type="button" value="0" data-action="number">0</button>
+        <button class="button button__operator button__commons" type="button" value="/" data-action="dividir">
           /
         </button>
-        <button class="button button__operator button__commons" type="button" value="x">
+        <button class="button button__operator button__commons" type="button" value="x" data-action="multiplicar">
           x
         </button>
-        <button class="button button__calculator" type="button" value="RESET">
+        <button class="button button__calculator" type="button" value="RESET" data-action="reset">
           RESET
         </button>
-        <button class="button button__result" type="button" value="=">=</button>
+        <button class="button button__result" type="button" value="=" data-action="calculator">=</button>
       </div>
     </main>
 
