--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
                 aria-label="Option theme 01"
                 value="1"
                 class="option-theme"
-                checked="true"
-                aria-checked="true"
+                checked
                 tabindex="0"
                 aria-hidden="true"
               />
@@ -66,7 +65,6 @@
               <button
                 type="button"
                 class="switch-controler"
-                aria-labelledby="Switch controler"
                 aria-pressed="mixed"
                 aria-label="Switch Controller to toggle themes"
               ></button>
@@ -78,7 +76,7 @@
         class="viewfinder"
         aria-live="assertive"
         aria-atomic="true"
-        aria-labelledby="view results and operations"
+        aria-label="view results and operations"
       >
         399,981
       </div>
