--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
                 class="option-theme"
                 checked
                 tabindex="0"
-                aria-hidden="true"
               />
               <input
                 type="radio"
@@ -50,7 +49,6 @@
                 value="2"
                 class="option-theme"
                 tabindex="0"
-                aria-hidden="true"
               />
               <input
                 type="radio"
@@ -60,7 +58,6 @@
                 value="3"
                 class="option-theme"
                 tabindex="0"
-                aria-hidden="true"
               />
               <button
                 type="button"
@@ -76,7 +73,7 @@
         class="viewfinder"
         aria-live="assertive"
         aria-atomic="true"
-        aria-label="view results and operations"
+        aria-labelledby="view results and operations"
       >
         399,981
       </div>
