--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         class="viewfinder"
         aria-live="assertive"
         aria-atomic="true"
-        aria-labelledby="view results and operations"
+        aria-label="view results and operations"
       >
         399,981
       </div>
